@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-05T08:23:01Z",
-  "count_outdated" : 561,
-  "uniques_outdated" : 323,
-  "count" : 590,
+  "timestamp" : "2022-10-06T01:28:06Z",
+  "count_outdated" : 563,
+  "uniques_outdated" : 324,
+  "count" : 591,
   "uniques" : 338,
   "clones" : [
-    {
-      "timestamp": "2022-09-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-22T00:00:00Z",
       "count": 2,
