@@ -1,3 +1,11 @@
+2022-10-06T01:28:06Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3193867471
+* notice: last 14d: unq all: 5 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 323 561 / 338 590
+* notice: next accum: outdated-unq outdated-all / unq all: 324 563 / 338 591
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-21] / []
+
 2022-10-05T08:23:01Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3188331906
 * notice: last 14d: unq all: 5 29
